@@ -30,7 +30,7 @@ public class FetchScheduleFactory {
   private FetchScheduleFactory() {}                   // no public ctor
 
   /** Return the FetchSchedule implementation. */
-  public static FetchSchedule getFetchSchedule(Configuration conf) {
+  public synchronized static FetchSchedule getFetchSchedule(Configuration conf) {
     String clazz = conf.get("db.fetch.schedule.class", DefaultFetchSchedule.class.getName());
     ObjectCache objectCache = ObjectCache.get(conf);
     FetchSchedule impl = (FetchSchedule)objectCache.getObject(clazz);
