@@ -2,6 +2,8 @@ Nutch Change Log
 
 Nutch Development Trunk
 
+* NUTCH-1606 Check that Factory classes use the cache in a thread safe way (jnioche)
+
 * NUTCH-1653 AbstractScoringFilter (jnioche)
 
 * NUTCH-1562 Order of execution for scoring filters (jnioche, snagel)
